--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
-    "@cypress/github-action": "github:cypress-io/github-action",
-    "cypress": "^10.4.0"
+    "@cypress/github-action": "github:cypress-io/github-action"
+  },
+  "devDependencies": {
+    "cypress": "^10.5.0",
+    "cypress-dotenv": "^2.0.0",
+    "dotenv": "^16.0.1"
   }
 }
